add title, introduction

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Glint's blog~</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Glint的个人博客</h1>
+								<p>个人博客beta版本正式启用，目前主要用于更新<b>图对比推荐算法</b>的科研进展，一方面可以代替周报或者记录学习历程，另一方面也不妨作为硕士期间的个人门户，为未来的就业作准备。</p>
 							</div>
 						</div>
 						<nav>
