make some changes especially the contact part

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<!-- <span class="icon fa-gem"></span> -->
+							<img
+								src="../assets/icons/dog.svg"
+								alt=""
+								style="width: 16; height: 16;"
+							>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -90,7 +95,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://github.com/GlintFreedom" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-wechat"><span class="label">WeChat</span></a></li>
+									<li><a href="#" class="icon brands fa-weixin"><span class="label">WeChat</span></a></li>
 									<li><a href="#" class="icon brands fa-qq"><span class="label">QQ</span></a></li>
 									<li><a href="#" class="icon brands fa-weibo"><span class="label">WeiBo</span></a></li>
 									<li><a href="#" class="icon brands fa-apple"><span class="label">Apple</span></a></li>
