make some changes especially the contact part

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/dog.ico" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -20,12 +21,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!-- <span class="icon fa-gem"></span> -->
-							<img
+							<span class="icon fa-gem"></span>
+							<!-- <img
 								src="../assets/icons/dog.svg"
 								alt=""
 								style="width: 16; height: 16;"
-							>
+							> -->
 						</div>
 						<div class="content">
 							<div class="inner">
