--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Glint的个人博客</h1>
-								<p>个人博客beta版本正式启用，目前主要用于更新<b>图对比推荐算法</b>的科研进展，一方面可以代替周报或者记录学习历程，另一方面也不妨作为硕士期间的个人门户，为未来的就业作准备。</p>
+								<p>个人博客beta版本正式启用，目前主要用于更新<b>图对比推荐算法</b>的科研进展，</br>一方面可以代替周报或者记录学习历程，另一方面也用来作为硕士期间的个人门户。</p>
 							</div>
 						</div>
 						<nav>
@@ -50,10 +50,21 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<h2 class="major">个人简历</h2>
+								<span class="image main"><img src="images/lifePhoto.jpg" alt="" /></span>
+								<p>基本信息</p>
+								<HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+								<p>姓名：于九阳</p>
+								<p>学历：硕士在读</p>
+								<p>机构：北京航空航天大学软件学院</p>
+								<p>导师：谭火彬</p>
+								<p>email：&nbsp;<a href="yjy_freedom@buaa.edu.cn">yjy_freedom@buaa.edu.cn</a></p>
+								<p>个人简介</p>
+								<HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+								<p>因深度学习工作获得了2028年图灵奖，被公认为世界领先的AI专家和深度学习先驱。2000年，出生在山东青岛，现生活在宇宙中心五道口，拥有白日梦想家一职。</p>
+								<p>研究方向</p>
+								<HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+								<p>长期从事图对比学习及其在推荐算法中的应用研究，主要包括：（1）图表示学习；（2）推荐算法；（3）知识图谱。</p>
 							</article>
 
 						<!-- Work -->
