--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 							<article id="intro">
 								<h2 class="major">个人简历</h2>
 								<span class="image main"><img src="images/lifePhoto.jpg" alt="" /></span>
-								<p>基本信息</p>
-								<HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+								<p style="font-size: 15; font-weight: 550;">基本信息</p>
+								<HR style="border:1 dashed #987cb9; top: -15px;" width="80%" color=#987cb9 SIZE=1>
 								<p>姓名：于九阳</p>
 								<p>学历：硕士在读</p>
 								<p>机构：北京航空航天大学软件学院</p>
