--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 								<p>机构：北京航空航天大学软件学院</p>
 								<p>导师：谭火彬</p>
 								<p>email：&nbsp;<a href="yjy_freedom@buaa.edu.cn">yjy_freedom@buaa.edu.cn</a></p>
-								<p>个人简介</p>
-								<HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+								<p style="font-size: 30px; font-weight: 550;">个人简介</p>
+								<HR style="border:1 dashed #987cb9; margin-top: -15px;" width="80%" color=#987cb9 SIZE=1>
 								<p>因深度学习工作获得了2028年图灵奖，被公认为世界领先的AI专家和深度学习先驱。2000年，出生在山东青岛，现生活在宇宙中心五道口，拥有白日梦想家一职。</p>
-								<p>研究方向</p>
-								<HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1>
+								<p style="font-size: 30px; font-weight: 550;">研究方向</p>
+								<HR style="border:1 dashed #987cb9; margin-top: -15px;" width="80%" color=#987cb9 SIZE=1>
 								<p>长期从事图对比学习及其在推荐算法中的应用研究，主要包括：（1）图表示学习；（2）推荐算法；（3）知识图谱。</p>
 							</article>
 
