--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<p>学历：硕士在读</p>
 								<p>机构：北京航空航天大学软件学院</p>
 								<p>导师：谭火彬</p>
-								<p>email：&nbsp;<a href="yjy_freedom@buaa.edu.cn">yjy_freedom@buaa.edu.cn</a></p>
+								<p>email：&nbsp;<a href="mailto:yjy_freedom@buaa.edu.cn">yjy_freedom@buaa.edu.cn</a></p>
 								<p style="font-size: 30px; font-weight: 550;">个人简介</p>
 								<HR style="border:1 dashed #987cb9; margin-top: -15px;" width="80%" color=#987cb9 SIZE=1>
 								<p>因深度学习工作获得了2028年图灵奖，被公认为世界领先的AI专家和深度学习先驱。2000年，出生在山东青岛，现生活在宇宙中心五道口，拥有白日梦想家一职。</p>
