--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 								<li><a href="#intro">简历</a></li>
 								<li><a href="#work">进展</a></li>
 								<li><a href="#paper">论文</a></li>
+								<li><a href="#skill">技术</a></li>
 								<li><a href="#contact">联系我</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -53,23 +54,23 @@
 								<h2 class="major">个人简历</h2>
 								<span class="image main"><img src="images/lifePhoto.jpg" alt="" /></span>
 								<p style="font-size: 30px; font-weight: 550;">基本信息</p>
-								<HR style="border:1 dashed #987cb9; margin-top: -15px;" width="80%" color=#987cb9 SIZE=1>
+								<HR style="border:1 dashed #987cb9; margin: -15px 0 -15px 0;" width="80%" color=#987cb9 SIZE=1>
 								<p>姓名：于九阳</p>
 								<p>学历：硕士在读</p>
 								<p>机构：北京航空航天大学软件学院</p>
 								<p>导师：谭火彬</p>
 								<p>email：&nbsp;<a href="mailto:yjy_freedom@buaa.edu.cn">yjy_freedom@buaa.edu.cn</a></p>
 								<p style="font-size: 30px; font-weight: 550;">个人简介</p>
-								<HR style="border:1 dashed #987cb9; margin-top: -15px;" width="80%" color=#987cb9 SIZE=1>
+								<HR style="border:1 dashed #987cb9; margin: -15px 0 -15px 0;" width="80%" color=#987cb9 SIZE=1>
 								<p>因深度学习工作获得了2028年图灵奖，被公认为世界领先的AI专家和深度学习先驱。2000年，出生在山东青岛，现生活在宇宙中心五道口，拥有白日梦想家一职。</p>
 								<p style="font-size: 30px; font-weight: 550;">研究方向</p>
-								<HR style="border:1 dashed #987cb9; margin-top: -15px;" width="80%" color=#987cb9 SIZE=1>
+								<HR style="border:1 dashed #987cb9; margin: -15px 0 -15px 0;" width="80%" color=#987cb9 SIZE=1>
 								<p>长期从事图对比学习及其在推荐算法中的应用研究，主要包括：（1）图表示学习；（2）推荐算法；（3）知识图谱。</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">科研进展</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
@@ -77,9 +78,18 @@
 
 						<!-- Paper -->
 							<article id="paper">
-								<h2 class="major">Paper</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h2 class="major">优秀论文解析</h2>
+								<ul>
+									<li><a href="assets\papers\Self-supervised Graph Learning for Recommendation.pdf" download><span>Self-supervised Graph Learning for Recommendation</span></a></li>
+								</ul>
+							</article>
+						
+						<!-- Skill -->
+							<article id="skill">
+								<h2 class="major">前端技术库</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
 						<!-- Contact -->
