--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</article>
 						
 						<!-- Skill -->
-							<article id="skill">
+							<article id="skill" style="width: 80rem;">
 								<h2 class="major">前端技术库</h2>
 								<table class="button-demo">
 									<tr>
