--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<td id="button1"></td>
 										<td style="font-size: 5;">
 											<pre>
-												<code class="language-c">
+												<code class="javascript">
 													const newButton = document.createElement('button')<br/>
 													newButton.innerHTML = 'newButton-unclicked'<br/>
 													newButton.id = 'newButton'<br/>
