--- a/index.html
+++ b/index.html
@@ -98,45 +98,45 @@
 										<td style="font-size: 5;">
 											<pre>
 												<code class="javascript">
-													const newButton = document.createElement('button')<br/>
-													newButton.innerHTML = 'newButton-unclicked'<br/>
-													newButton.id = 'newButton'<br/>
-													newButton.className = 'newButton-unclicked'<br/>
-													newButton.addEventListener('click', function() {<br/>
-													&nbsp;if(newButton.innerHTML == 'newButton-unclicked'){<br/>
-													&nbsp;&nbsp;newButton.innerHTML = 'newButton-clicked'<br/>
-													&nbsp;&nbsp;newButton.className = 'newButton-clicked'<br/>
-													&nbsp;}<br/>
-													&nbsp;else{<br/>
-													&nbsp;&nbsp;newButton.innerHTML = 'newButton-unclicked'<br/>
-													&nbsp;&nbsp;newButton.className = 'newButton-unclicked'<br/>
-													&nbsp;}<br/>
-													})<br/>
-													document.getElementById('target').appendChild(newButton)
+const newButton = document.createElement('button')
+newButton.innerHTML = 'newButton-unclicked'
+newButton.id = 'newButton'
+newButton.className = 'newButton-unclicked'
+newButton.addEventListener('click', function() {
+	if(newButton.innerHTML == 'newButton-unclicked'){
+		newButton.innerHTML = 'newButton-clicked'
+		newButton.className = 'newButton-clicked'
+	}
+	else{
+	newButton.innerHTML = 'newButton-unclicked'
+	newButton.className = 'newButton-unclicked'
+	}
+})
+document.getElementById('target').appendChild(newButton)
 												</code>
 											</pre>
 										</td>
 										<td style="font-size: 5;">
 											<pre>
 												<code class="css">
-													.newButton-unclicked{<br/>
-														&nbsp;background-color: #e7746f;<br/>
-														&nbsp;border-color: #e7746f;<br/>
-														&nbsp;border-radius: 4px;<br/>
-														&nbsp;font-size: 1em;<br/>
-														&nbsp;font-weight: 700;<br/>
-														&nbsp;color: white;<br/>
-														&nbsp;padding: 4px 10px 4px 10px;<br/>
-														}<br/>
-														.newButton-clicked{<br/>
-														&nbsp;background-color: #4c5c97;<br/>
-														&nbsp;border-color: #4c5c97;<br/>
-														&nbsp;border-radius: 4px;<br/>
-														&nbsp;font-size: 1em;<br/>
-														&nbsp;font-weight: 700;<br/>
-														&nbsp;color: white;<br/>
-														&nbsp;padding: 4px 10px 4px 10px;<br/>
-														}
+.newButton-unclicked{
+	background-color: #e7746f;
+	border-color: #e7746f;
+	border-radius: 4px;
+	font-size: 1em;
+	font-weight: 700;
+	color: white;
+	padding: 4px 10px 4px 10px;
+}
+.newButton-clicked{
+	background-color: #4c5c97;
+	border-color: #4c5c97;
+	border-radius: 4px;
+	font-size: 1em;
+	font-weight: 700;
+	color: white;
+	padding: 4px 10px 4px 10px;
+}
 												</code>
 											</pre>
 										</td>
