--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									</tr>
 									<tr>
 										<td id="button1"></td>
-										<td style="font-size: 5;">
+										<td style="font-size: 5; width: 30rem;">
 											<pre>
 												<code class="javascript">
 const newButton = document.createElement('button')
@@ -116,7 +116,7 @@ document.getElementById('target').appendChild(newButton)
 												</code>
 											</pre>
 										</td>
-										<td style="font-size: 5;">
+										<td style="font-size: 5; width: 30rem;">
 											<pre>
 												<code class="css">
 .newButton-unclicked{
