--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 										<td id="button1"></td>
 										<td style="font-size: 5;">
 											<pre>
-												<code class="javascript">
-const newButton = document.createElement('button')
+<code class="javascript">const newButton = document.createElement('button')
 newButton.innerHTML = 'newButton-unclicked'
 newButton.id = 'newButton'
 newButton.className = 'newButton-unclicked'
@@ -112,14 +111,12 @@ newButton.addEventListener('click', function() {
 	newButton.className = 'newButton-unclicked'
 	}
 })
-document.getElementById('target').appendChild(newButton)
-												</code>
+document.getElementById('target').appendChild(newButton)</code>
 											</pre>
 										</td>
 										<td style="font-size: 5;">
 											<pre>
-												<code class="css">
-.newButton-unclicked{
+<code class="css">.newButton-unclicked{
 	background-color: #e7746f;
 	border-color: #e7746f;
 	border-radius: 4px;
@@ -136,8 +133,7 @@ document.getElementById('target').appendChild(newButton)
 	font-weight: 700;
 	color: white;
 	padding: 4px 10px 4px 10px;
-}
-												</code>
+}</code>
 											</pre>
 										</td>
 									</tr>
