--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 									<tr>
 										<td id="button1"></td>
 										<td style="font-size: 5;">
-											<pre>
-<code class="javascript">const newButton = document.createElement('button')
+<pre><code class="javascript">const newButton = document.createElement('button')
 newButton.innerHTML = 'newButton-unclicked'
 newButton.id = 'newButton'
 newButton.className = 'newButton-unclicked'
@@ -111,12 +110,10 @@ newButton.addEventListener('click', function() {
 	newButton.className = 'newButton-unclicked'
 	}
 })
-document.getElementById('target').appendChild(newButton)</code>
-											</pre>
+document.getElementById('target').appendChild(newButton)</code></pre>
 										</td>
 										<td style="font-size: 5;">
-											<pre>
-<code class="css">.newButton-unclicked{
+<pre><code class="css">.newButton-unclicked{
 	background-color: #e7746f;
 	border-color: #e7746f;
 	border-radius: 4px;
@@ -133,8 +130,7 @@ document.getElementById('target').appendChild(newButton)</code>
 	font-weight: 700;
 	color: white;
 	padding: 4px 10px 4px 10px;
-}</code>
-											</pre>
+}</code></pre>
 										</td>
 									</tr>
 								</table>
