--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<article id="skill" style="width: 80rem;">
 								<h2 class="major">前端技术库</h2>
 								<table class="button-demo">
-									<tr>
+									<tr style="text-align: center;">
 										<td>效果</td>
 										<td>js</td>
 										<td>css</td>
