--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ document.getElementById('target').appendChild(newButton)</code></pre>
 											<textarea name="message" id="message" rows="4"></textarea>
 										</div>
 									</div>
-									<ul class="actions">7\
-										<li><input type="submit" value="发送" class="primary" /></li>
+									<ul class="actions">
+										<li><input type="submit" value="发送" class="primary" id="send-button"/></li>
 										<li><input type="reset" value="清空" /></li>
 									</ul>
 								</form>
@@ -429,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/sendMessage.js"></script>
 			<script src="assets/js/highlight.min.js"></script>
 			<script>hljs.initHighlightingOnLoad();</script>
 
