--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ document.getElementById('target').appendChild(newButton)</code></pre>
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">联系我</h2>
-								<form method="post" action="#">
+								<form action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">姓名</label>
