add email message

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/sendMessage.js"></script>
 			<script src="assets/js/highlight.min.js"></script>
-			<script>hljs.initHighlightingOnLoad();</script>
+			<script>hljs.highlightAll();</script>
 
 			<script src="assets/demo/button1.js"></script>
 
