--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="module" src="assets/js/sendMessage.js"></script>
+			<script src="assets/js/sendMessage.js"></script>
 			<script src="assets/js/highlight.min.js"></script>
 			<script>hljs.highlightAll();</script>
 
