add animation1--rainbow pig

--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@ document.getElementById('target').appendChild(newButton)</code></pre>
 }</code></pre>
 										</td>
 									</tr>
+									<tr>
+										<td id="animation1"></td>
+										<td style="font-size: 5;">
+<pre><code class="javascript">some code</code></pre>
+										</td>
+										<td style="font-size: 5;">
+<pre><code class="css">some code</code></pre>
+										</td>
+									</tr>
 								</table>
 							</article>
 
@@ -434,6 +443,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script>hljs.highlightAll();</script>
 
 			<script src="assets/demo/button1.js"></script>
+			<script src="assets/demo/animation1.js"></script>
 
 	</body>
 </html>
