--- a/index.html
+++ b/index.html
@@ -134,7 +134,21 @@ document.getElementById('target').appendChild(newButton)</code></pre>
 										</td>
 									</tr>
 									<tr>
-										<td id="animation1"></td>
+										<td id="animation1">
+											<div class="solar-syst">
+												<div class="sun"></div>
+												<div class="mercury"></div>
+												<div class="venus"></div>
+												<div class="earth"></div>
+												<div class="mars"></div>
+												<div class="jupiter"></div>
+												<div class="saturn"></div>
+												<div class="uranus"></div>
+												<div class="neptune"></div>
+												<div class="pluto"></div>
+												<div class="asteroids-belt"></div>
+											</div>
+										</td>
 										<td style="font-size: 5;">
 <pre><code class="javascript">some code</code></pre>
 										</td>
