add xixi/no-xixi switch

--- a/index.html
+++ b/index.html
@@ -134,20 +134,7 @@ document.getElementById('target').appendChild(newButton)</code></pre>
 										</td>
 									</tr>
 									<tr>
-										<td id="animation1">
-											<div class="solar-syst">
-												<div class="sun"></div>
-												<div class="mercury"></div>
-												<div class="venus"></div>
-												<div class="earth"></div>
-												<div class="mars"></div>
-												<div class="jupiter"></div>
-												<div class="saturn"></div>
-												<div class="uranus"></div>
-												<div class="neptune"></div>
-												<div class="pluto"></div>
-												<div class="asteroids-belt"></div>
-											</div>
+										<td id="switch1">
 										</td>
 										<td style="font-size: 5;">
 <pre><code class="javascript">some code</code></pre>
@@ -458,6 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 			<script src="assets/demo/button1.js"></script>
 			<script src="assets/demo/animation1.js"></script>
+			<script src="assets/demo/switch1.js"></script>
 
 	</body>
 </html>
