--- a/index.html
+++ b/index.html
@@ -96,41 +96,10 @@
 									<tr>
 										<td id="button1"></td>
 										<td style="font-size: 5;">
-<pre><code class="javascript">const newButton = document.createElement('button')
-newButton.innerHTML = 'newButton-unclicked'
-newButton.id = 'newButton'
-newButton.className = 'newButton-unclicked'
-newButton.addEventListener('click', function() {
- if(newButton.innerHTML == 'newButton-unclicked'){
-  newButton.innerHTML = 'newButton-clicked'
-  newButton.className = 'newButton-clicked'
- }
- else{
-  newButton.innerHTML = 'newButton-unclicked'
-  newButton.className = 'newButton-unclicked'
- }
-})
-document.getElementById('target').appendChild(newButton)</code></pre>
+<pre><code class="javascript" id="button1-js"></code></pre>
 										</td>
 										<td style="font-size: 5;">
-<pre><code class="css">.newButton-unclicked{
- background-color: #e7746f;
- border-color: #e7746f;
- border-radius: 4px;
- font-size: 1em;
- font-weight: 700;
- color: white;
- padding: 4px 10px 4px 10px;
-}
-.newButton-clicked{
- background-color: #4c5c97;
- border-color: #4c5c97;
- border-radius: 4px;
- font-size: 1em;
- font-weight: 700;
- color: white;
- padding: 4px 10px 4px 10px;
-}</code></pre>
+<pre><code class="css" id="button1-css"></code></pre>
 										</td>
 									</tr>
 									<tr>
@@ -438,6 +407,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<script src="assets/js/skillUtils.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/sendMessage.js"></script>
 			<script src="assets/js/highlight.min.js"></script>
