--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 										<td id="switch1">
 										</td>
 										<td style="font-size: 5;">
-<pre><code class="javascript">some code</code></pre>
+<pre><code class="javascript" id="switch1-js"></code></pre>
 										</td>
 										<td style="font-size: 5;">
-<pre><code class="css">some code</code></pre>
+<pre><code class="css" id="switch1-css"></code></pre>
 										</td>
 									</tr>
 								</table>
