Fixed the width of the first column "Effects" in the technical page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<h2 class="major">前端技术库</h2>
 								<table class="button-demo">
 									<tr style="text-align: center;">
-										<td>效果</td>
+										<td style="width: 10rem;">效果</td>
 										<td>js</td>
 										<td>css</td>
 									</tr>
