--- a/index.html
+++ b/index.html
@@ -87,29 +87,29 @@
 						<!-- Skill -->
 							<article id="skill" style="width: 80rem;">
 								<h2 class="major">前端技术库</h2>
-								<table class="button-demo">
+								<table class="module-demo">
 									<tr style="text-align: center;">
-										<td style="width: 10rem;">效果</td>
-										<td>js</td>
-										<td>css</td>
+										<th>效果</th>
+										<th>js</th>
+										<th>css</th>
 									</tr>
 									<tr>
 										<td id="button1"></td>
 										<td style="font-size: 5;">
-<pre><code class="javascript" id="button1-js"></code></pre>
+											<pre><code class="javascript" id="button1-js"></code></pre>
 										</td>
 										<td style="font-size: 5;">
-<pre><code class="css" id="button1-css"></code></pre>
+											<pre><code class="css" id="button1-css"></code></pre>
 										</td>
 									</tr>
 									<tr>
 										<td id="switch1">
 										</td>
 										<td style="font-size: 5;">
-<pre><code class="javascript" id="switch1-js"></code></pre>
+											<pre><code class="javascript" id="switch1-js"></code></pre>
 										</td>
 										<td style="font-size: 5;">
-<pre><code class="css" id="switch1-css"></code></pre>
+											<pre><code class="css" id="switch1-css"></code></pre>
 										</td>
 									</tr>
 								</table>
