Fixed the height of tr in the technical page

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 									<tr>
 										<td id="button1"></td>
 										<td style="font-size: 5;">
-											<pre><code class="javascript" id="button1-js"></code></pre>
+											<div><pre><code class="javascript" id="button1-js"></code></pre></div>
 										</td>
 										<td style="font-size: 5;">
-											<pre><code class="css" id="button1-css"></code></pre>
+											<div><pre><code class="css" id="button1-css"></code></pre></div>
 										</td>
 									</tr>
 									<tr>
