Fixed the height of tr in the technical page

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 										<td id="switch1">
 										</td>
 										<td style="font-size: 5;">
-											<pre><code class="javascript" id="switch1-js"></code></pre>
+											<div><pre><code class="javascript" id="switch1-js"></code></pre></div>
 										</td>
 										<td style="font-size: 5;">
-											<pre><code class="css" id="switch1-css"></code></pre>
+											<div><pre><code class="css" id="switch1-css"></code></pre></div>
 										</td>
 									</tr>
 								</table>
