Change switch1's moving position

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
 											<div><pre><code class="css" id="switch1-css"></code></pre></div>
 										</td>
 									</tr>
+									<tr>
+										<td id="animation1">
+										</td>
+										<td style="font-size: 5;">
+											<div><pre><code class="javascript" id="animation1-js"></code></pre></div>
+										</td>
+										<td style="font-size: 5;">
+											<div><pre><code class="css" id="animation1-css"></code></pre></div>
+										</td>
+									</tr>
 								</table>
 							</article>
 
