--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 										</td>
 									</tr>
 									<tr>
-										<td id="animation1">
+										<td id="ghost">
 										</td>
 										<td style="font-size: 5;">
-											<div><pre><code class="javascript" id="animation1-js"></code></pre></div>
+											<div><pre><code class="javascript" id="ghost-js"></code></pre></div>
 										</td>
 										<td style="font-size: 5;">
-											<div><pre><code class="css" id="animation1-css"></code></pre></div>
+											<div><pre><code class="css" id="ghost-css"></code></pre></div>
 										</td>
 									</tr>
 								</table>
@@ -424,7 +424,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script>hljs.highlightAll();</script>
 
 			<script src="assets/demo/button1.js"></script>
-			<script src="assets/demo/animation1.js"></script>
+			<!-- <script src="assets/demo/animation1.js"></script> -->
+			<script src="assets/demo/ghost.js"></script>
 			<script src="assets/demo/switch1.js"></script>
 
 	</body>
