The module ‘ghost’ has been finished

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 										</td>
 									</tr>
 									<tr>
-										<td id="ghost">
+										<td>
+											<div id="ghost"></div>
 										</td>
 										<td style="font-size: 5;">
 											<div><pre><code class="javascript" id="ghost-js"></code></pre></div>
